# rdbms

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TRANSACTION_INVESTIGATION.md  data.catalog  debug_test.wal  docker-compose.yml  session.json  test_fix.wal  test_norecovery.wal
.github/workflows/: ci.yml  pr-check.yaml
crates/db/: Cargo.toml
crates/db/src/: commands.rs  engine.rs  history.rs  lib.rs  printer.rs  repl.rs  sql.rs
crates/db/tests/: create_index_test.rs  persistence_test.rs  write_test.rs
crates/query/: Cargo.toml  README.md
crates/query/src/: expr.rs  lib.rs  logical_plan.rs  parser.rs  planner.rs  recovery.rs  schema.rs
crates/query/src/execution/: executor.rs  filter.rs  index_scan.rs  mod.rs  nested_loop_join.rs  operator.rs  planner.rs  projection.rs  seq_scan.rs  tests.rs  tuple.rs  update.rs
crates/query/src/index/: btree.rs  mod.rs  tests.rs
crates/query/tests/: acceptance.rs  alter_table_catalog.rs  alter_table_planner.rs  alter_table_regression.rs  blob_planner.rs  blob_predicates.rs  blob_wal.rs  bplustree_correctness.rs  constraints_pk_unique.rs  index_perf.rs  index_scan_exec.rs  planner_index_selection.rs
crates/query/tests/common/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: buffer.rs  disk.rs  lib.rs  page.rs  replacer.rs
crates/txn/: Cargo.toml
crates/txn/src/: lib.rs
crates/txn/tests/: README.md  acid_full_tests.rs  integration_tests.rs  lock_tests.rs  mod.rs  transaction_core_tests.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
db/: schema.sql  seed.sql
docs/: AUTOINCREMENT_FIX.md  FRONTEND_INTEGRATION.md  QUICKSTART.md  SQL.md  TRANSACTION_ABORT_BUG_DEBUG.md  TRANSACTION_REFACTORING_PLAN.md  TRANSACTION_ROLLBACK_BUG.md  issue_1_4_indexing.md  issue_1_5_repl.md  postman-testing-guide.md  run.md  user-journey-testing.md
packaging/systemd/: install.sh  rdbms.service  setup-users.sh
scripts/: db_init.sh  docker-init.sh  docker_init.py  seed_via_api.sh  test_docker_init.py
services/api/: Cargo.toml
services/api/src/: handlers.rs  main.rs
services/backend-service/: Cargo.toml
services/backend-service/src/: app_state.rs  auth.rs  handlers.rs  jwt.rs  lib.rs  main.rs  models.rs
services/backend-service/tests/: api_tests.rs  integration_tests.rs
services/frontend/: .env.example  .gitignore  CICD.md  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  playwright.config.ts  server.cjs  tailwind.config.ts  vite.config.ts  vitest.config.ts
services/frontend/.github/workflows/: cd.yml  ci.yml
services/frontend/k8s/production/: frontend-deployment.yaml
services/frontend/k8s/staging/: frontend-deployment.yaml
services/frontend/src/: App.tsx  index.css  main.tsx
services/frontend/src/components/events/: EventCard.tsx  EventFilters.tsx  TicketSelector.tsx
services/frontend/src/components/layout/: Footer.tsx  Navbar.tsx
services/frontend/src/components/ui/: command.tsx  sheet.tsx
services/frontend/src/contexts/: AuthContext.tsx  CartContext.tsx
services/frontend/src/lib/: api.ts
services/frontend/src/pages/: AuthCallback.tsx  CartPage.tsx  CheckoutPage.tsx  EventDetailPage.tsx  EventsPage.tsx  Index.tsx  MyTicketsPage.tsx
services/frontend/src/pages/organizer/: CreateEventPage.tsx  OrganizerDashboard.tsx  OrganizerEvents.tsx
services/frontend/src/test/: auth.test.tsx  setup.ts  types.test.ts
services/frontend/src/types/: index.ts
services/frontend/tests/: app.spec.ts  integration.test.cjs  user-journey.integration.spec.ts
