[package]
name = "db"
version = "0.3.0"
edition = "2024"
description = "Embedded RDBMS with ACID transactions, B+Tree indexes, and WAL"
repository = "https://github.com/reinhardbuyabo/rdbms"
homepage = "https://github.com/reinhardbuyabo/rdbms"
license = "MIT"
authors = ["Your Name <your@email.com>"]

[[bin]]
name = "rdbms"
path = "src/bin/rdbms.rs"

[[bin]]
name = "rdbmsd"
path = "src/bin/server.rs"

[features]
default = ["tcp-server"]
tcp-server = ["tokio/full", "async-trait"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
query = { path = "../query" }
rustyline = "13"
storage = { path = "../storage" }
wal = { path = "../wal" }
txn = { path = "../txn" }
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
