[package]
name = "query"
version = "0.3.0"
edition = "2021"

[dependencies]
sqlparser = "0.52"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
storage = { path = "../storage" }
wal = { path = "../wal" }
txn = { path = "../txn" }
parking_lot = "0.12"

[dev-dependencies]
insta = "1.40"
rand = "0.8"
tempfile = "3.8"
