[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "Actix Web API service with embedded RDBMS"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
db = { path = "../../crates/db" }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
actix-rt = "2"
actix-web = "4"
serde_json = "1.0"
tempfile = "3.8"