[package]
name = "backend-service"
version = "0.2.0"
edition = "2021"
description = "Backend service with embedded RDBMS - exposes database over REST API for frontend consumption"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
db = { path = "../../crates/db" }
wal = { path = "../../crates/wal" }
parking_lot = "0.12"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
actix-web = "4"
serde_json = "1.0"
tempfile = "3.8"